--- a/Proyecto2/mainwindow.ui
+++ b/Proyecto2/mainwindow.ui
@@ -2533,7 +2533,33 @@
      </rect>
     </property>
     <property name="text">
-     <string>crear matriz</string>
+     <string>Simulacion</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="G2">
+    <property name="geometry">
+     <rect>
+      <x>315</x>
+      <y>40</y>
+      <width>25</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>TextLabel</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="G1">
+    <property name="geometry">
+     <rect>
+      <x>315</x>
+      <y>10</y>
+      <width>25</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>TextLabel</string>
     </property>
    </widget>
   </widget>
