--- a/Proyecto2/imagenes.qrc
+++ b/Proyecto2/imagenes.qrc
@@ -10,5 +10,33 @@
         <file>torreExplosiva.png</file>
         <file>torreFuego.png</file>
         <file>torreSencilla.png</file>
+        <file>fe0.png</file>
+        <file>fe45.png</file>
+        <file>fe90.png</file>
+        <file>fe135.png</file>
+        <file>ff0.png</file>
+        <file>ff45.png</file>
+        <file>ff90.png</file>
+        <file>ff135.png</file>
+        <file>ff180.png</file>
+        <file>ff225.png</file>
+        <file>ff270.png</file>
+        <file>ff315.png</file>
+        <file>fs0.png</file>
+        <file>fs45.png</file>
+        <file>fs90.png</file>
+        <file>fs135.png</file>
+        <file>fs180.png</file>
+        <file>fs225.png</file>
+        <file>fs270.png</file>
+        <file>fs315.png</file>
+        <file>glad1atras.png</file>
+        <file>glad1der.png</file>
+        <file>glad1izq.png</file>
+        <file>glad2atras.png</file>
+        <file>glad2delante.png</file>
+        <file>glad2dere.png</file>
+        <file>glad2frente.png</file>
+        <file>glad2izq.png</file>
     </qresource>
 </RCC>
