--- a/Proyecto2/mainwindow.ui
+++ b/Proyecto2/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1297</width>
-    <height>870</height>
+    <width>1400</width>
+    <height>900</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -2536,32 +2536,6 @@
      <string>Simulacion</string>
     </property>
    </widget>
-   <widget class="QLabel" name="G2">
-    <property name="geometry">
-     <rect>
-      <x>315</x>
-      <y>40</y>
-      <width>25</width>
-      <height>25</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>TextLabel</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="G1">
-    <property name="geometry">
-     <rect>
-      <x>315</x>
-      <y>10</y>
-      <width>25</width>
-      <height>25</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>TextLabel</string>
-    </property>
-   </widget>
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
@@ -2575,7 +2549,7 @@
      <string>Ver Generaciones</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label">
+   <widget class="QLabel" name="G1Informacion">
     <property name="geometry">
      <rect>
       <x>1160</x>
@@ -2588,7 +2562,7 @@
      <string>Gadiador Poblacion 1</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_2">
+   <widget class="QLabel" name="G2Informacion">
     <property name="geometry">
      <rect>
       <x>1160</x>
@@ -2601,7 +2575,7 @@
      <string>Gadiador Poblacion 2</string>
     </property>
    </widget>
-   <widget class="QTextBrowser" name="Poblacion1txtBrow">
+   <widget class="QTextBrowser" name="G1Datos">
     <property name="geometry">
      <rect>
       <x>1130</x>
@@ -2611,7 +2585,7 @@
      </rect>
     </property>
    </widget>
-   <widget class="QTextBrowser" name="Poblacion2txtBrow">
+   <widget class="QTextBrowser" name="G2Datos">
     <property name="geometry">
      <rect>
       <x>1130</x>
@@ -2621,13 +2595,351 @@
      </rect>
     </property>
    </widget>
+   <widget class="QLabel" name="G1">
+    <property name="geometry">
+     <rect>
+      <x>315</x>
+      <y>10</y>
+      <width>30</width>
+      <height>30</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="G2">
+    <property name="geometry">
+     <rect>
+      <x>315</x>
+      <y>40</y>
+      <width>30</width>
+      <height>30</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lb">
+    <property name="geometry">
+     <rect>
+      <x>40</x>
+      <y>370</y>
+      <width>65</width>
+      <height>65</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lb_2">
+    <property name="geometry">
+     <rect>
+      <x>170</x>
+      <y>360</y>
+      <width>65</width>
+      <height>65</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lb_3">
+    <property name="geometry">
+     <rect>
+      <x>180</x>
+      <y>370</y>
+      <width>65</width>
+      <height>65</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lb_4">
+    <property name="geometry">
+     <rect>
+      <x>190</x>
+      <y>380</y>
+      <width>65</width>
+      <height>65</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lb_5">
+    <property name="geometry">
+     <rect>
+      <x>200</x>
+      <y>390</y>
+      <width>65</width>
+      <height>65</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lb_6">
+    <property name="geometry">
+     <rect>
+      <x>210</x>
+      <y>400</y>
+      <width>65</width>
+      <height>65</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lb_7">
+    <property name="geometry">
+     <rect>
+      <x>220</x>
+      <y>410</y>
+      <width>65</width>
+      <height>65</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lb_8">
+    <property name="geometry">
+     <rect>
+      <x>230</x>
+      <y>420</y>
+      <width>65</width>
+      <height>65</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lb_9">
+    <property name="geometry">
+     <rect>
+      <x>550</x>
+      <y>740</y>
+      <width>65</width>
+      <height>65</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lb_10">
+    <property name="geometry">
+     <rect>
+      <x>560</x>
+      <y>750</y>
+      <width>65</width>
+      <height>65</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lb_11">
+    <property name="geometry">
+     <rect>
+      <x>560</x>
+      <y>750</y>
+      <width>65</width>
+      <height>65</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lb_12">
+    <property name="geometry">
+     <rect>
+      <x>560</x>
+      <y>750</y>
+      <width>65</width>
+      <height>65</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lb_13">
+    <property name="geometry">
+     <rect>
+      <x>560</x>
+      <y>750</y>
+      <width>65</width>
+      <height>65</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lb_14">
+    <property name="geometry">
+     <rect>
+      <x>560</x>
+      <y>750</y>
+      <width>65</width>
+      <height>65</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lb_15">
+    <property name="geometry">
+     <rect>
+      <x>560</x>
+      <y>750</y>
+      <width>65</width>
+      <height>65</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lb_16">
+    <property name="geometry">
+     <rect>
+      <x>560</x>
+      <y>750</y>
+      <width>65</width>
+      <height>65</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lb_17">
+    <property name="geometry">
+     <rect>
+      <x>560</x>
+      <y>750</y>
+      <width>65</width>
+      <height>65</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lb_18">
+    <property name="geometry">
+     <rect>
+      <x>560</x>
+      <y>750</y>
+      <width>65</width>
+      <height>65</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lb_19">
+    <property name="geometry">
+     <rect>
+      <x>560</x>
+      <y>750</y>
+      <width>65</width>
+      <height>65</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lb_20">
+    <property name="geometry">
+     <rect>
+      <x>560</x>
+      <y>750</y>
+      <width>65</width>
+      <height>65</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lb_21">
+    <property name="geometry">
+     <rect>
+      <x>560</x>
+      <y>750</y>
+      <width>65</width>
+      <height>65</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lb_22">
+    <property name="geometry">
+     <rect>
+      <x>560</x>
+      <y>750</y>
+      <width>65</width>
+      <height>65</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lb_23">
+    <property name="geometry">
+     <rect>
+      <x>560</x>
+      <y>750</y>
+      <width>65</width>
+      <height>65</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lb_24">
+    <property name="geometry">
+     <rect>
+      <x>560</x>
+      <y>750</y>
+      <width>65</width>
+      <height>65</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1297</width>
+     <width>1400</width>
      <height>22</height>
     </rect>
    </property>
